--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-js-loader": "^0.1.2",
+    "react-loader-spinner": "^5.4.5",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
